benchmark commons now uses slf4j as logging framework
(cherry picked from commit 63f5258e2db74819ff213159d1fb15c542171211)
(cherry picked from commit 850ab11393fa4fea4347c8c5a1ed14ce7b41ccc0)
(cherry picked from commit 5ca985037dae41ab785f4a99d2aa1659b4bb784d)
(cherry picked from commit 52d9f6bcdb661fe5c765543a1a6374780fd3e5e9)